--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -1,19 +1,21 @@
 @font-face {
   font-family: 'raleway';
-  src: '../fonts/Raleway-VariableFont_wght.ttf';
+  src: url("../fonts/Raleway-VariableFont_wght.ttf");
 }
 
 @font-face {
   font-family: 'poiret';
-  src: '../fonts/PoiretOne-Regular.ttf';
+  src: url("../fonts/PoiretOne-Regular.ttf");
 }
 
 :root {
   --color-primary: #00BFBF;
-  --color-on-primary: #FFFFFF;
+  --color-on-primary: #01080F;
   --color-surface: #01080F;
   --color-on-surface: #FFFFFF;
   --color-surface-overlay: #01080f94;
+  --color-secondary-surface: #020a11b1;
+  --color-on-secondary-surface: #FFFFFF;
   --font-raleway: 'raleway';
   --font-poiret: 'poiret';
 }
@@ -24,21 +26,95 @@
   font-family: var(--font-poiret);
 }
 
+body {
+  font-family: var(--font-poiret);
+  background: var(--color-surface);
+}
+
 h1, h2, h3, h4, h5, h6 {
   font-family: var(--font-raleway);
 }
 
 .full-screen {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
 }
 
-.landing {
-  background: var(--color-surface);
+.btn {
+  padding: 10px 20px;
+}
+
+.btn-outlined {
+  background: none;
+  color: var(--color-on-surface);
+  font-weight: bolder;
+  border-color: var(--color-primary);
+}
+
+.btn-primary {
+  background-color: var(--color-primary);
+  color: var(--color-on-primary);
+  font-weight: bolder;
+  border-color: var(--color-primary);
+}
+
+.btn-rounded {
+  border-radius: 20px;
+}
+
+.text-primary {
+  color: var(--color-primary);
+}
+
+.section {
+  background: var(--color-secondary-surface);
+  padding: 20px 30px;
+  border-radius: 5px;
+  color: var(--color-on-secondary-surface);
+}
+
+.section .title {
+  padding-bottom: 20px;
+}
+
+.section ul {
+  list-style-type: none;
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: 1fr 1fr;
       grid-template-columns: 1fr 1fr;
+}
+
+.section ul li {
+  padding: 10px;
+  font-weight: bold;
+  color: var(--color-on-secondary-surface);
+}
+
+#background {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 2fr 1.5fr;
+      grid-template-columns: 2fr 1.5fr;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+
+#background .my-image {
+  height: 100%;
+  background-image: url("../images/img-bruno.png");
+  background-size: cover;
+  background-position: center;
+  overflow: hidden;
+}
+
+.landing {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 2fr 1.5fr;
+      grid-template-columns: 2fr 1.5fr;
   color: var(--color-on-surface);
 }
 
@@ -84,36 +160,6 @@ h1, h2, h3, h4, h5, h6 {
   color: var(--color-primary);
 }
 
-.btn {
-  padding: 10px 20px;
-}
-
-.btn-outlined {
-  background: none;
-  color: var(--color-on-surface);
-  font-weight: bolder;
-  border-color: var(--color-primary);
-}
-
-.btn-primary {
-  background-color: var(--color-primary);
-  color: var(--color-on-primary);
-  font-weight: bolder;
-  border-color: var(--color-primary);
-}
-
-.btn-rounded {
-  border-radius: 20px;
-}
-
-.my-image {
-  height: 100%;
-  background-image: url("../images/img-bruno.png");
-  background-size: cover;
-  background-position: center;
-  overflow: hidden;
-}
-
 #socials-bar {
   margin: 20px;
   width: calc(100% - 40px);
@@ -141,7 +187,49 @@ h1, h2, h3, h4, h5, h6 {
           align-items: center;
 }
 
+#about-me-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  z-index: 1;
+}
+
+#about-me-container #about-me-inner {
+  margin-bottom: 20px;
+}
+
+#about-me-container #about-me-inner #about-me {
+  margin-top: 20px;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
+  -ms-grid-rows: max-content max-content;
+      grid-template-rows: -webkit-max-content -webkit-max-content;
+      grid-template-rows: max-content max-content;
+  grid-gap: 20px;
+}
+
+#about-me-container #about-me-inner #about-me .section:last-child {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-column: 1/3;
+}
+
+@media (min-width: 980px) {
+  #about-me-container #about-me-inner {
+    width: 90%;
+    max-width: 980px;
+  }
+}
+
 @media (max-width: 980px) {
+  #background {
+    display: block;
+  }
   .landing {
     display: block;
     position: relative;
@@ -153,6 +241,24 @@ h1, h2, h3, h4, h5, h6 {
     height: 100%;
     width: 100%;
     background-color: var(--color-surface-overlay);
+  }
+  #about-me-container {
+    background-color: var(--color-surface-overlay);
+  }
+  #about-me-container #about-me-inner {
+    margin: 0 20px 20px 20px;
+  }
+  #about-me-container #about-me-inner #about-me {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+    -ms-grid-rows: max-content max-content max-content;
+        grid-template-rows: -webkit-max-content -webkit-max-content -webkit-max-content;
+        grid-template-rows: max-content max-content max-content;
+  }
+  #about-me-container #about-me-inner #about-me .section:last-child {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1/2;
   }
 }
 /*# sourceMappingURL=index.css.map */
