--- a/src/assets/css/index.scss
+++ b/src/assets/css/index.scss
@@ -1,20 +1,22 @@
 @font-face{
     font-family: 'raleway';
-    src :'../fonts/Raleway-VariableFont_wght.ttf' 
+    src:url('../fonts/Raleway-VariableFont_wght.ttf');
 }
 
 
 @font-face{
     font-family: 'poiret';
-    src :'../fonts/PoiretOne-Regular.ttf' 
+    src :url('../fonts/PoiretOne-Regular.ttf');
 }
 
 :root{
     --color-primary: #00BFBF;
-    --color-on-primary: #FFFFFF;
+    --color-on-primary: #01080F;
     --color-surface: #01080F;
     --color-on-surface: #FFFFFF;
     --color-surface-overlay: #01080f94;
+    --color-secondary-surface: #020a11b1;
+    --color-on-secondary-surface: #FFFFFF;
     --font-raleway: 'raleway';
     --font-poiret: 'poiret';
 }
@@ -25,21 +27,89 @@
     font-family: var(--font-poiret);
 }
 
-
+body{
+    font-family: var(--font-poiret);
+    background: var(--color-surface);
+}
 
 h1, h2, h3, h4, h5, h6 {
     font-family: var(--font-raleway);
 }
 
 .full-screen{
-    width: 100vw;
+    width: 100%;
     height: 100vh;
 }
 
-.landing{
-    background: var(--color-surface);
+.btn{
+    padding: 10px 20px;
+}
+
+.btn-outlined {
+    background: none;
+    color: var(--color-on-surface);
+    font-weight: bolder;
+    border-color: var(--color-primary);
+}
+
+.btn-primary{
+    background-color: var(--color-primary);
+    color: var(--color-on-primary);
+    font-weight: bolder;
+    border-color: var(--color-primary);
+}
+
+.btn-rounded{
+    border-radius: 20px;
+}
+
+.text-primary {
+    color: var(--color-primary)
+}
+
+.section {
+    background: var(--color-secondary-surface);
+    padding: 20px 30px;
+    border-radius: 5px;
+    color: var(--color-on-secondary-surface);
+    
+    .title{
+        padding-bottom: 20px;
+    }
+
+    ul{
+        list-style-type: none;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+
+        li{
+            padding:10px;
+            font-weight: bold;
+            color: var(--color-on-secondary-surface);
+        }
+    }
+}
+
+#background {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 2fr 1.5fr;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: -1;
+
+    .my-image{
+        height: 100%;
+        background-image: url('../images/img-bruno.png');
+        background-size: cover;
+        background-position: center;
+        overflow: hidden;
+    }
+}
+
+.landing{
+    display: grid;
+    grid-template-columns: 2fr 1.5fr;
     color: var(--color-on-surface);
 
     button{
@@ -75,36 +145,6 @@ h1, h2, h3, h4, h5, h6 {
     }
 }
 
-.btn{
-    padding: 10px 20px;
-}
-
-.btn-outlined {
-    background: none;
-    color: var(--color-on-surface);
-    font-weight: bolder;
-    border-color: var(--color-primary);
-}
-
-.btn-primary{
-    background-color: var(--color-primary);
-    color: var(--color-on-primary);
-    font-weight: bolder;
-    border-color: var(--color-primary);
-}
-
-.btn-rounded{
-    border-radius: 20px
-}
-
-.my-image{
-    height: 100%;
-    background-image: url('../images/img-bruno.png');
-    background-size: cover;
-    background-position: center;
-    overflow: hidden;
-}
-
 #socials-bar{
     margin: 20px;
     width: calc(100% - 40px);
@@ -123,7 +163,42 @@ h1, h2, h3, h4, h5, h6 {
         }
 }
 
+#about-me-container{
+    display: flex;
+    justify-content: center;
+    z-index: 1;
+
+    #about-me-inner{
+        margin-bottom: 20px;
+        #about-me {
+            margin-top: 20px;
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            grid-template-rows: max-content max-content;
+            grid-gap: 20px;
+
+            .section:last-child{
+                grid-column: 1/3;
+            }
+        }
+    }
+}
+
+@media (min-width: 980px){
+    #about-me-container{
+
+        #about-me-inner {
+            width: 90%;
+            max-width: 980px;
+        }
+    }
+}
+
 @media (max-width: 980px){
+    #background {
+        display: block;
+    }
+
     .landing{
         display: block;
         position: relative;
@@ -136,6 +211,22 @@ h1, h2, h3, h4, h5, h6 {
         height: 100%;
         width: 100%;
         background-color: var(--color-surface-overlay);
+    }
+
+    #about-me-container{
+        background-color: var(--color-surface-overlay);
+
+        #about-me-inner{
+            margin: 0 20px 20px 20px;
+            #about-me {
+                grid-template-columns: 1fr;
+                grid-template-rows: max-content max-content max-content;
+
+                .section:last-child{
+                    grid-column: 1/2;
+                }
+            }
+        }
     }
 }
 
